# BenEater6502PCSimulator

./: .gitignore  CMakeLists.txt  Readme.md  refactorSteps.txt  refactorSteps20251124.txt  toFix.txt
src/: CMakeLists.txt  Computer.cpp  Computer.hpp  ComputerLogger.cpp  ComputerLogger.hpp  main.cpp
src/assembler/: Assembler.cpp  Assembler.hpp  CMakeLists.txt
src/components/: CMakeLists.txt  Cpu.cpp  Cpu.hpp  Eeprom32k.cpp  Eeprom32k.hpp  MiniLCD.cpp  MiniLCDRenderer.cpp  Ram32k.cpp  VersatileInterfaceAdapter.cpp  VersitileInterfaceAdapter.cpp  VersitileInterfaceAdapter.hpp  toTest.cpp
src/components/include/: ALUFunctions.hpp  Cpu.hpp  Eeprom32k.hpp  MiniLCD.hpp  MiniLCDRenderer.hpp  Ram32k.hpp  VersatileInterfaceAdapter.hpp
src/components/include/logger/: CpuLogger.hpp  DisplayedNumberLogger.hpp  RamLogger.hpp  VIALogger.hpp
src/components/logger/: CpuLogger.cpp  DisplayedNumberLogger.cpp  RamLogger.cpp  VIALogger.cpp
tests/: CMakeLists.txt  VIAlcdTest.cpp  cpuTest.cpp  exampletest.cpp
tests/integrationTests/: CMakeLists.txt  FullSystemTest.cpp  MiniLCDTest.cpp  VIAlcdTest.cpp
tests/testPrograms/: program.6502
